📚 Major documentation reorganization and simplification - Completely rewrote README.md with clear quick start section - Moved advanced features to dedicated sections - Simplified .env.sample with better organization and comments - Streamlined docker-compose.yml for clarity - Reorganized EXAMPLES.md with practical, focused examples - Simplified Makefile with user-friendly commands - Fixed markdown formatting issues - Clarified settings.json location (only one exists in ./config/) - Better separation of basic vs advanced features

--- a/.env.sample
+++ b/.env.sample
@@ -1,200 +1,96 @@
-# .env.sample - Example configuration for transmissionvpn
-# Copy this to .env and customize for your setup.
+# =============================================================================
+# TransmissionVPN Configuration
+# =============================================================================
+# Copy this file to .env and customize the values below
 
-# ---- VPN Client Settings ----
-# VPN_CLIENT: 'openvpn' or 'wireguard'
+# =============================================================================
+# VPN SETTINGS (Required)
+# =============================================================================
+
+# VPN client type: 'openvpn' or 'wireguard'
 VPN_CLIENT=openvpn
 
-# VPN_CONFIG: Path *inside the container* to your VPN configuration file.
-# For OpenVPN: e.g., /config/openvpn/your_provider.ovpn
-# For WireGuard: e.g., /config/wireguard/wg0.conf
-# If unset, the script will try to use the first .ovpn or .conf file found in the
-# respective /config/openvpn or /config/wireguard directory.
-VPN_CONFIG=
+# Path to your VPN config file inside the container
+# Place your .ovpn file in ./config/openvpn/ and reference it here
+VPN_CONFIG=/config/openvpn/your_provider.ovpn
 
-# ---- OpenVPN Specific Credentials ----
-# There are two ways to provide OpenVPN credentials if your .ovpn file requires them
-# (e.g., it contains `auth-user-pass` without a specific file path, or just `auth-user-pass`).
+# VPN credentials (required for OpenVPN, not needed for WireGuard)
+VPN_USER=your_vpn_username
+VPN_PASS=your_vpn_password
 
-# Option 1: Use Environment Variables (Recommended if not using a file)
-# These are used if both VPN_USER and VPN_PASS are set and not empty.
-VPN_USER=
-VPN_PASS=
+# =============================================================================
+# SYSTEM SETTINGS
+# =============================================================================
 
-# Option 2: Use a Credentials File at a Fixed Location
-# If VPN_USER and VPN_PASS are NOT set (or one/both are empty), the script will
-# automatically look for a credentials file at the fixed path inside the container:
-#   /config/openvpn/credentials.txt
-# This file must contain your username on the first line and your password on the second line.
-# To use this method:
-#   1. Create a text file (e.g., `my_vpn_auth.txt` or simply `credentials.txt`) on your host system.
-#   2. Add your VPN username to the first line.
-#   3. Add your VPN password to the second line.
-#   4. Ensure this file is mounted into the container at `/config/openvpn/credentials.txt`.
-#      For example, if you map your host directory `/opt/transmissionvpn_data/config` to `/config`
-#      in the container, you would place your credentials file on the host at
-#      `/opt/transmissionvpn_data/config/openvpn/credentials.txt`.
-# (The old VPN_CREDENTIALS_FILE environment variable is no longer used.)
-
-# ---- General Settings ----
-# ENABLE_PRIVOXY: 'yes' or 'no' to enable/disable Privoxy HTTP proxy (also uses VPN)
-ENABLE_PRIVOXY=no
-
-# PRIVOXY_PORT: Port Privoxy will listen on *inside* the container.
-# The Docker -p mapping will expose this to your host.
-PRIVOXY_PORT=8118
-
-# PUID & PGID: User and Group ID for Transmission and related processes.
-# Set these to match the owner of your host's /config, /downloads, and /watch directories
-# to avoid permission issues. Find yours with `id yourusername` on your host.
+# User and Group IDs - set to match your host user to avoid permission issues
+# Find yours with: id $(whoami)
 PUID=1000
 PGID=1000
 
-# TZ: Your local timezone, e.g., America/New_York, Europe/London
-# See: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-TZ=Etc/UTC
+# Timezone - see: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+TZ=UTC
 
-# LAN_NETWORK: Your LAN network in CIDR notation (e.g., 192.168.1.0/24).
-# Allows Transmission/Privoxy access from your LAN, bypassing the VPN for these local connections.
-LAN_NETWORK=
+# =============================================================================
+# NETWORK SETTINGS (Optional)
+# =============================================================================
 
-# NAME_SERVERS: Comma-separated list of DNS servers to be used by the container.
-# If not set, DNS servers from the VPN or system defaults will be used.
+# Your local network in CIDR notation (allows local access bypassing VPN)
+# Example: 192.168.1.0/24 or 10.0.0.0/8
+# LAN_NETWORK=192.168.1.0/24
+
+# Custom DNS servers (comma-separated)
 # Example: 1.1.1.1,8.8.8.8
-NAME_SERVERS=
+# NAME_SERVERS=
 
-# DEBUG: 'true' or 'false'. Enables verbose logging for VPN setup scripts.
+# =============================================================================
+# TRANSMISSION SETTINGS (Optional)
+# =============================================================================
+
+# Transmission peer port for incoming connections
+# TRANSMISSION_PEER_PORT=51413
+
+# Web UI authentication (leave empty to disable)
+# TRANSMISSION_RPC_USERNAME=admin
+# TRANSMISSION_RPC_PASSWORD=your_password
+
+# =============================================================================
+# OPTIONAL FEATURES
+# =============================================================================
+
+# Enable HTTP proxy that also routes through VPN
+ENABLE_PRIVOXY=no
+PRIVOXY_PORT=8118
+
+# Enable debug logging
 DEBUG=false
 
-# VPN_OPTIONS: Additional command-line options for the OpenVPN client.
-# Example: --inactive 3600 --ping-restart 60
-VPN_OPTIONS=
+# Send logs to Docker logs instead of files
+LOG_TO_STDOUT=false
 
-# UMASK: File creation mask for Transmission and files it creates.
-# The linuxserver/transmission base image often defaults to 002, which is good for group write access.
-# 022 is more restrictive (group read-only).
-UMASK=002
+# =============================================================================
+# ADVANCED FEATURES (Optional)
+# =============================================================================
 
-# ADDITIONAL_PORTS: Comma-separated list of additional TCP or UDP ports
-# (e.g., 51413, 51413/udp for Transmission P2P) that should be allowed for *outbound* traffic
-# originating from within the container, through the VPN tunnel.
-# This does NOT publish these ports from the container to the host.
-# For Transmission, you might need to allow its listening port here if UPnP/NAT-PMP fails
-# and you want to ensure connectivity *through the VPN* for incoming peer connections.
-# This is different from the Web UI port (9091), which is typically accessed locally.
-ADDITIONAL_PORTS=
+# Docker secrets (for production deployments)
+# FILE__VPN_USER=/run/secrets/vpn_username
+# FILE__VPN_PASS=/run/secrets/vpn_password
 
-# TRANSMISSION_VERSION: Set in the Dockerfile, informational. Reflects the base image version.
-# TRANSMISSION_VERSION=4.0.6
-
-# ---- Transmission Specific Settings ----
-# These are passed to the linuxserver/transmission base image.
-# See https://docs.linuxserver.io/images/docker-transmission for more details on some of these.
-
-# TRANSMISSION_RPC_AUTHENTICATION_REQUIRED: 'true' or 'false'. Enable/disable password protection for the Web UI.
-# Default: false
-# TRANSMISSION_RPC_AUTHENTICATION_REQUIRED=false
-
-# TRANSMISSION_RPC_USERNAME: Username for Web UI if authentication is enabled.
-# Default: (empty)
-# TRANSMISSION_RPC_USERNAME=
-
-# TRANSMISSION_RPC_PASSWORD: Password for Web UI if authentication is enabled.
-# Default: (empty)
-# TRANSMISSION_RPC_PASSWORD=
-
-# TRANSMISSION_RPC_HOST_WHITELIST: Comma-separated list of IP addresses/ranges to allow Web UI access from.
-# Default: '127.0.0.1,192.168.*.*,10.*.*.*,172.16.*.*'
-# TRANSMISSION_RPC_HOST_WHITELIST=
-
-# TRANSMISSION_RPC_WHITELIST_ENABLED: 'true' or 'false'. Enable/disable the host whitelist.
-# Default: true
-# TRANSMISSION_RPC_WHITELIST_ENABLED=true
-
-# TRANSMISSION_PEER_PORT: Port Transmission uses for incoming P2P connections (TCP and UDP).
-# If blank, a random port is usually chosen by Transmission on startup. Set this if you need a fixed port, 
-# for example, for port forwarding through your VPN provider or firewall.
-# Ensure this port is also listed in ADDITIONAL_PORTS if you want to allow it through the VPN.
-# Default: (empty, random)
-# TRANSMISSION_PEER_PORT=
-
-# TRANSMISSION_INCOMPLETE_DIR: Path *inside the container* for partially downloaded files.
-# If enabled, the base image usually defaults this to /downloads/incomplete.
-# Default: (empty, uses base image default)
-# TRANSMISSION_INCOMPLETE_DIR=
-
-# TRANSMISSION_INCOMPLETE_DIR_ENABLED: 'true' or 'false'. Enable/disable the incomplete downloads directory feature.
-# Default: true
-# TRANSMISSION_INCOMPLETE_DIR_ENABLED=true
-
-# TRANSMISSION_WATCH_DIR: Path *inside the container* for the watch directory (auto-add .torrent files).
-# Default: /watch (matches the volume mount)
-# TRANSMISSION_WATCH_DIR=/watch
-
-# TRANSMISSION_WATCH_DIR_ENABLED: 'true' or 'false'. Enable/disable watching the /watch directory for .torrent files.
-# The watch directory itself is fixed at /watch via volume mount.
-# Default: true
-# TRANSMISSION_WATCH_DIR_ENABLED=true
-
-# TRANSMISSION_BLOCKLIST_ENABLED: 'true' or 'false'. Enable/disable the peer blocklist feature.
-# Default: true
-# TRANSMISSION_BLOCKLIST_ENABLED=true
-
-# TRANSMISSION_BLOCKLIST_URL: URL of the blocklist to download. The base image has a default.
-# Example: "http://john.bitsurge.net/public/biglist.p2p.gz"
-# Default: (uses base image default)
-# TRANSMISSION_BLOCKLIST_URL=
-
-# ---- Alternative Web UI (LinuxServer.io Compatible) ----
-# TRANSMISSION_WEB_HOME: Path *inside the container* to alternative web UI files.
-# Use this with a mounted volume for best results.
-# Example: -v ./flood-for-transmission:/web-ui:ro -e TRANSMISSION_WEB_HOME=/web-ui
-# TRANSMISSION_WEB_HOME=/web-ui
-
-# TRANSMISSION_WEB_UI: (Legacy) Shows instructions for manual setup.
-# Options: combustion, kettu, flood-for-transmission, transmission-web-control
-# Setting this will show setup instructions in the logs.
-# TRANSMISSION_WEB_UI=flood-for-transmission
-
-# ---- Health Check & Logging Settings ----
-# HEALTH_CHECK_HOST: Host to ping for network connectivity verification through VPN
-# Default: google.com
+# Monitoring and health checks
+# METRICS_ENABLED=false
+# CHECK_DNS_LEAK=false
+# CHECK_IP_LEAK=false
 # HEALTH_CHECK_HOST=google.com
 
-# LOG_TO_STDOUT: Send Transmission logs to stdout for 'docker logs' instead of log file
-# Options: 'true' or 'false'
-# Default: false
-# LOG_TO_STDOUT=false
-
-# ---- LinuxServer.io Docker Mods ----
-# DOCKER_MODS: Extend container functionality with LinuxServer.io Docker Mods
-# Use pipe (|) separator for multiple mods
-# See: https://github.com/linuxserver/docker-mods
-
-# Theme.park - Beautiful dark themes for Transmission web UI
+# LinuxServer.io Docker Mods
 # DOCKER_MODS=ghcr.io/gilbn/theme.park:transmission
 # TP_THEME=hotline
-# Available themes: hotline, dark, dracula, aquamarine, organizr, space-gray, overseerr, nord, plex
 
-# Universal Package Install - Install additional OS or Python packages
+# Additional packages
 # DOCKER_MODS=lscr.io/linuxserver/mods:universal-package-install
-# INSTALL_PACKAGES=unrar|p7zip|mediainfo|curl|git
-# INSTALL_PIP_PACKAGES=apprise|requests
+# INSTALL_PACKAGES=unrar|p7zip|mediainfo
 
-# Enhanced Archive Support - Modern unrar v6
-# DOCKER_MODS=lscr.io/linuxserver/mods:universal-unrar6
+# Alternative web UI path (mount UI files to this path)
+# TRANSMISSION_WEB_HOME=/web-ui
 
-# Troubleshooting Tools - Network and system debugging tools
-# DOCKER_MODS=lscr.io/linuxserver/mods:universal-tshoot
-
-# Multiple Mods Example - Combine theme + packages + troubleshooting
-# DOCKER_MODS=ghcr.io/gilbn/theme.park:transmission|lscr.io/linuxserver/mods:universal-package-install|lscr.io/linuxserver/mods:universal-tshoot
-# TP_THEME=hotline
-# INSTALL_PACKAGES=unrar|mediainfo|curl
-
-# Advanced VPN Mods (Community) - Enhanced WireGuard with PIA
-# DOCKER_MODS=pyunramura/wireguard-pia
-# LOC=swiss
-# WG_USER=your_pia_username  
-# WG_PASS=your_pia_password
-# PORT_FORWARDING=true
+# Additional ports to allow through VPN (comma-separated)
+# ADDITIONAL_PORTS=51413,8080
