📚 Enhance compatibility for haugene/docker-transmission-openvpn migration - Add DISABLE_HAUGENE_COMPATIBILITY option in .env.sample and Dockerfile - Implement directory compatibility symlinks in new setup script - Update README.md and EXAMPLES.md with directory structure changes and migration options

--- a/.env.sample
+++ b/.env.sample
@@ -67,6 +67,10 @@ DEBUG=false
 # Send logs to Docker logs instead of files
 LOG_TO_STDOUT=false
 
+# Disable haugene/docker-transmission-openvpn compatibility symlinks
+# Set to 'true' to disable automatic creation of /downloads/completed and /data symlinks
+# DISABLE_HAUGENE_COMPATIBILITY=false
+
 # =============================================================================
 # ADVANCED FEATURES (Optional)
 # =============================================================================
