📚 Add automatic web UI download feature - Introduce TRANSMISSION_WEB_UI_AUTO option in .env.sample and Dockerfile - Update README.md and EXAMPLES.md with usage instructions for alternative web UIs

--- a/.env.sample
+++ b/.env.sample
@@ -53,6 +53,16 @@ TZ=UTC
 # TRANSMISSION_RPC_USERNAME=admin
 # TRANSMISSION_RPC_PASSWORD=your_password
 
+# Automatic web UI download and setup
+# Downloads and configures alternative web UIs automatically
+# Supported: flood, kettu, combustion, transmission-web-control
+# UIs are downloaded to /config/web-ui/<name>/ and persist across restarts
+# TRANSMISSION_WEB_UI_AUTO=flood
+
+# Alternative web UI path (manual setup - mount UI files to this path)
+# Use either TRANSMISSION_WEB_UI_AUTO (automatic) OR TRANSMISSION_WEB_HOME (manual)
+# TRANSMISSION_WEB_HOME=/web-ui
+
 # =============================================================================
 # OPTIONAL FEATURES
 # =============================================================================
@@ -92,9 +102,6 @@ LOG_TO_STDOUT=false
 # Additional packages
 # DOCKER_MODS=lscr.io/linuxserver/mods:universal-package-install
 # INSTALL_PACKAGES=unrar|p7zip|mediainfo
-
-# Alternative web UI path (mount UI files to this path)
-# TRANSMISSION_WEB_HOME=/web-ui
 
 # Additional ports to allow through VPN (comma-separated)
 # ADDITIONAL_PORTS=51413,8080
