--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,25 +1,25 @@
-name-template: 'v$NEXT_PATCH_VERSION'
-tag-template: 'v$NEXT_PATCH_VERSION'
+---
+name-template: "v$RESOLVED_VERSION"
+tag-template: "v$RESOLVED_VERSION"
 categories:
-  - title: '🚀 Features'
+  - title: "🚀 Features"
     labels:
-      - 'feature'
-      - 'feat'
-  - title: '🐛 Bug Fixes'
+      - "feature"
+      - "enhancement"
+  - title: "🐛 Bug Fixes"
     labels:
-      - 'bug'
-      - 'fix'
-  - title: '🧰 Maintenance'
+      - "fix"
+      - "bug"
+  - title: "🧰 Maintenance"
     labels:
-      - 'chore'
-      - 'maintenance'
-      - 'docs'
-      - 'ci'
-      - 'build'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+      - "maintenance"
+      - "chore"
+      - "dependencies"
+      - "ci"
+change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
 template: |
   ## Changes
 
   $CHANGES
 
-  **Full Changelog**: https://github.com/${{ github.repository }}/compare/$PREVIOUS_TAG...v$NEXT_PATCH_VERSION 
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION 
