--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,109 +1,66 @@
-name: ✨ Feature Request
-description: Suggest a new feature or enhancement for transmissionvpn
-title: "[FEATURE] "
-labels:
-  - enhancement
-
+---
+name: "🚀 Feature Request"
+description: "Suggest a new feature or enhancement."
+labels: ["feature", "triage"]
 body:
   - type: markdown
     attributes:
       value: |
-        Thanks for suggesting a new feature! Please provide as much detail as possible to help us understand your request.
+        Thank you for suggesting a new feature!
 
-  - type: checkboxes
-    id: prerequisites
-    attributes:
-      label: Prerequisites
-      description: Please confirm the following before submitting
-      options:
-        - label: I have searched existing issues to ensure this feature hasn't been requested before
-          required: true
-        - label: I have read the documentation to confirm this feature doesn't already exist
-          required: true
+        - **Is this a bug or a support question?**
+          Please use the appropriate form for those.
+        - **Is your feature request related to a problem?**
+          Please describe the problem you're trying to solve.
 
-  - type: dropdown
-    id: feature-category
-    attributes:
-      label: Feature Category
-      description: What category does this feature fall into?
-      options:
-        - VPN/Security Enhancement
-        - Transmission Configuration
-        - Monitoring/Health Checks
-        - User Interface/Experience
-        - Performance Optimization
-        - Documentation
-        - Automation/Scripts
-        - Integration (with other services)
-        - Other
-    validations:
-      required: true
-
+        Your feedback is valuable in shaping the future of this project.
   - type: textarea
-    id: problem-description
+    id: description
     attributes:
-      label: Problem Description
-      description: What problem does this feature solve? Is your feature request related to a problem?
-      placeholder: "I'm frustrated when... It would be helpful if..."
+      label: "Feature Description"
+      description: >-
+        Please provide a clear and concise description of the feature you
+        are requesting.
+      placeholder: >-
+        e.g., "Add support for a new alternative web UI called '...'."
     validations:
       required: true
-
   - type: textarea
-    id: proposed-solution
+    id: problem
     attributes:
-      label: Proposed Solution
-      description: Describe the solution you'd like to see implemented
-      placeholder: "I would like to see... This could work by..."
+      label: "Problem or Use Case"
+      description: >-
+        What problem does this feature solve? Why is it needed?
+      placeholder: >-
+        e.g., "I am always frustrated when [...] because [...]."
     validations:
       required: true
-
+  - type: textarea
+    id: solution
+    attributes:
+      label: "Proposed Solution"
+      description: >-
+        Describe the solution you'd like.
+        How do you see this feature being implemented?
+      placeholder: |
+        - Add a new environment variable `...`
+        - Modify the script `...` to handle the new option.
+    validations:
+      required: false
   - type: textarea
     id: alternatives
     attributes:
-      label: Alternative Solutions
-      description: Have you considered any alternative solutions or workarounds?
-      placeholder: "Alternatively, we could... I've tried..."
-
+      label: "Alternatives"
+      description: >-
+        Have you considered any alternative solutions or workarounds?
+      placeholder: >-
+        e.g., "I have tried [...] but it only works partially because [...]."
+    validations:
+      required: false
   - type: textarea
-    id: use-cases
+    id: additional-info
     attributes:
-      label: Use Cases
-      description: Describe specific use cases where this feature would be beneficial
-      placeholder: |
-        1. When using... this feature would...
-        2. Users who have... would benefit because...
-
-  - type: textarea
-    id: implementation-ideas
-    attributes:
-      label: Implementation Ideas
-      description: Do you have any ideas on how this could be implemented?
-      placeholder: "This could be implemented by... Maybe using..."
-
-  - type: dropdown
-    id: priority
-    attributes:
-      label: Priority
-      description: How important is this feature to you?
-      options:
-        - Low - Nice to have
-        - Medium - Would improve my workflow
-        - High - Blocking my use case
-      default: 1
-
-  - type: checkboxes
-    id: contribution
-    attributes:
-      label: Contribution
-      description: Would you be interested in contributing to this feature?
-      options:
-        - label: I would be willing to help test this feature
-        - label: I would be willing to contribute code for this feature
-        - label: I would be willing to help with documentation
-
-  - type: textarea
-    id: additional-context
-    attributes:
-      label: Additional Context
-      description: Add any other context, mockups, or examples that might help
-      placeholder: "Screenshots, configuration examples, links to similar features..." 
+      label: "Additional Information"
+      description: >-
+        Is there anything else we should know?
+        (e.g., links to related projects, screenshots, mockups) 
