--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,3 +1,4 @@
+---
 name: Build and Publish Docker Image
 
 # This workflow uses actions that are not certified by GitHub.
@@ -8,9 +9,13 @@ name: Build and Publish Docker Image
 on:
   push:
     branches:
-      - '**' # Trigger on all branches
+      - main
+      - develop
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*' # More specific SEMVER pattern
+      - 'v*'
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 env:
@@ -23,12 +28,15 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write # Required for OIDC if used, good practice
+      # This is used to complete the identity challenge
+      # with sigstore/fulcio when running outside of PRs.
+      id-token: write
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # Ensure full history for all branches and tags
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -41,6 +49,7 @@ jobs:
           echo "Ref: ${{ github.ref }}"
 
       - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -53,37 +62,46 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract Docker metadata
+      - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-            ghcr.io/${{ github.repository }}
+          images: magicalyak/transmissionvpn
           tags: |
-            # For pushes to the main branch
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            type=sha,format=short,prefix=sha-,enable=${{ github.ref == 'refs/heads/main' }}
+            # A git tag is a pointer to a specific commit. When a tag is pushed,
+            # this workflow will run and create a Docker image with that tag.
+            # Example: v4.0.5-r0 -> 4.0.5-r0, 4.0.5, 4.0, 4
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
 
-            # For Git tag pushes (e.g., v1.2.3)
-            type=semver,pattern={{version}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-            type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-            type=semver,pattern={{major}},enable=${{ startsWith(github.ref, 'refs/tags/v') }}
-            type=ref,event=tag,enable=${{ startsWith(github.ref, 'refs/tags/v') }} # Adds the tag itself, e.g., v1.2.3
+            # When a commit is pushed to the `main` branch, the `latest` tag
+            # will be updated.
+            type=raw,value=latest,enable={{is_default_branch}}
 
-            # For pushes to any other branch (not main, not a tag)
-            type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/v') }}
-            type=sha,format=short,prefix=sha-,enable=${{ github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/tags/v') }}
-          flavor: |
-            latest=auto # Ensure latest is only applied if explicitly matched (e.g. on main)
+            # When a commit is pushed to any other branch, a tag with the
+            # branch name will be created.
+            # Example: develop -> develop
+            type=ref,event=branch
 
-      - name: Build and push Docker image
+            # A sha-<hash> tag is created for every commit, regardless of
+            # the branch or event type. This is useful for debugging.
+            type=sha
+
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          platforms: linux/amd64,linux/arm64
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # build-args: |
+          #   TRANSMISSION_VERSION=${{ steps.meta.outputs.version }}
+          #   VCS_REF=${{ steps.meta.outputs.version }}
+          #   BUILD_DATE=${{ steps.meta.outputs.created }}
 
   # Optional: Create GitHub Release when a new Git tag is pushed
   create-release:
