ci: Update cache mode in build-and-publish workflow from max to min for optimized caching

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -97,7 +97,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-to: type=gha,mode=min
           # build-args: |
           #   TRANSMISSION_VERSION=${{ steps.meta.outputs.version }}
           #   VCS_REF=${{ steps.meta.outputs.version }}
