--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -32,9 +32,8 @@ jobs:
       - name: "Initialize CodeQL"
         uses: github/codeql-action/init@v3
         with:
-          languages: ${{ matrix.language }}
-          # If you wish to specify custom queries, you can do so here.
-          # For example:
+          languages: python
+          # Uncomment the following line if you want to use custom queries.
           # queries: security-extended,security-and-quality
 
       - name: "Autobuild"
