feat: Add built-in Prometheus exporter - Add optional transmission-exporter binary to main container - Implement s6 service for exporter management - Add TRANSMISSION_EXPORTER_ENABLED and TRANSMISSION_EXPORTER_PORT env vars - Update docker-compose.yml to expose metrics port (9099) - Remove separate exporter service in favor of built-in solution - Update documentation with new monitoring setup - Add monitoring/ directory with Prometheus + Grafana example - Similar to nzbgetvpn single-container approach

--- a/.env.sample
+++ b/.env.sample
@@ -64,6 +64,18 @@ TZ=UTC
 # TRANSMISSION_WEB_HOME=/web-ui
 
 # =============================================================================
+# PROMETHEUS MONITORING (Optional)
+# =============================================================================
+
+# Enable built-in Prometheus exporter for metrics collection
+# Set to 'true' to enable the exporter service within the container
+TRANSMISSION_EXPORTER_ENABLED=false
+
+# Port for the Prometheus metrics endpoint
+# Metrics will be available at http://localhost:9099/metrics
+TRANSMISSION_EXPORTER_PORT=9099
+
+# =============================================================================
 # OPTIONAL FEATURES
 # =============================================================================
 
