--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     ports:
       - "9091:9091"    # Transmission Web UI
       - "8118:8118"    # Privoxy HTTP proxy (if enabled)
+      - "9099:9099"    # Prometheus metrics endpoint (if enabled)
     
     # Volume mappings
     volumes:
@@ -50,23 +51,10 @@ services:
       retries: 3
       start_period: 60s
 
-  transmission-exporter:
-    image: sandrotosi/simple_transmission_exporter:latest
-    container_name: transmission-exporter
-    depends_on:
-      - transmissionvpn
-    ports:
-      - "29091:29091" # Prometheus metrics endpoint
-    environment:
-      - TRANSMISSION_HOST=transmissionvpn
-      - TRANSMISSION_PORT=9091
-      - TRANSMISSION_USERNAME=${TRANSMISSION_RPC_USERNAME}
-      - TRANSMISSION_PASSWORD=${TRANSMISSION_RPC_PASSWORD}
-    restart: unless-stopped
-
-# Notes on Metrics Integration:
-# The `transmission-exporter` service exposes metrics for Prometheus.
-# See the "Monitoring and Metrics" section in README.md for configuration details.
+# Notes on Built-in Metrics:
+# The container now includes an optional built-in Prometheus exporter.
+# Set TRANSMISSION_EXPORTER_ENABLED=true in your .env file to enable it.
+# Metrics will be available at http://localhost:9099/metrics
 
 # Uncomment for Docker secrets (production deployments)
 # secrets:
