docs: Clarify two metrics systems and resolve METRICS_ENABLED confusion - Document existing METRICS_ENABLED for internal health metrics - Clarify difference between Prometheus exporter and internal metrics - Add comprehensive comparison table - Update .env.sample with both systems - Resolve naming confusion between the two monitoring approaches

--- a/.env.sample
+++ b/.env.sample
@@ -64,9 +64,10 @@ TZ=UTC
 # TRANSMISSION_WEB_HOME=/web-ui
 
 # =============================================================================
-# PROMETHEUS MONITORING (Optional)
+# MONITORING & METRICS (Optional)
 # =============================================================================
 
+# Built-in Prometheus Exporter (Recommended for external monitoring)
 # Enable built-in Prometheus exporter for metrics collection
 # Set to 'true' to enable the exporter service within the container
 TRANSMISSION_EXPORTER_ENABLED=false
@@ -74,6 +75,16 @@ TRANSMISSION_EXPORTER_ENABLED=false
 # Port for the Prometheus metrics endpoint
 # Metrics will be available at http://localhost:9099/metrics
 TRANSMISSION_EXPORTER_PORT=9099
+
+# Internal Health Metrics (Advanced debugging and system monitoring)
+# Enable internal metrics collection (stored in /tmp/metrics.txt)
+# METRICS_ENABLED=false
+
+# Enable DNS leak detection in health checks
+# CHECK_DNS_LEAK=false
+
+# Enable IP leak detection in health checks  
+# CHECK_IP_LEAK=false
 
 # =============================================================================
 # OPTIONAL FEATURES
