--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -13,6 +13,7 @@ on:
       - develop
     tags:
       - 'v*'
+      - '[0-9]+.[0-9]+.[0-9]+-r[0-9]+'
   pull_request:
     branches:
       - main
@@ -106,7 +107,7 @@ jobs:
   # Optional: Create GitHub Release when a new Git tag is pushed
   create-release:
     needs: build-and-push # Run after build and push
-    if: startsWith(github.ref, 'refs/tags/v') # Only run for tag pushes
+    if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/tags/4.') # Only run for tag pushes
     runs-on: ubuntu-latest
     permissions:
       contents: write # To create releases
