Fix VPN connection and health check bugs, restructure monitoring - Fix VPN script bug: Add proper newlines before appending OpenVPN config directives - Fix health check script: Redirect log output to stderr to prevent stdout interference - Add health-patch.sh wrapper for LAN address override in VPN testing - Restructure monitoring directory to match nzbgetvpn pattern - Update dashboard metrics to use only existing metrics - Add comprehensive documentation for single-container setup - Remove non-functional monitoring configurations - Prioritize single-container approach over Docker Compose

--- a/monitoring/docker-compose/prometheus.yml
+++ b/monitoring/docker-compose/prometheus.yml
@@ -12,18 +12,20 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  # TransmissionVPN metrics (built-in exporter)
-  - job_name: 'transmissionvpn-exporter'
+  # TransmissionVPN built-in metrics exporter
+  - job_name: 'transmissionvpn'
     static_configs:
-      - targets: ['transmissionvpn:9099']  # Use container name, not localhost
+      - targets: ['transmissionvpn:9099']  # Use container name if on same network
+      # - targets: ['host.docker.internal:9099']  # Use this if containers on different networks
     scrape_interval: 15s
     scrape_timeout: 10s
     metrics_path: /metrics
 
-  # TransmissionVPN health checks
+  # TransmissionVPN health metrics (VPN status, container health)
   - job_name: 'transmissionvpn-health'
     static_configs:
-      - targets: ['transmissionvpn:8080']  # Separate health endpoint
+      - targets: ['health-metrics:8080']  # Health metrics service
+      # - targets: ['host.docker.internal:8080']  # Use this if running externally
     scrape_interval: 30s
     scrape_timeout: 10s
     metrics_path: /metrics
