feat: Smart healthcheck system with VPN monitoring and grace periods - Major Features: Smart healthcheck with VPN monitoring + configurable grace periods, Three healthcheck options: smart/transmission-only/strict, VPN connection bug fixes for OpenVPN configuration, Comprehensive testing and verification tools - Bug Fixes: Fixed VPN setup script OpenVPN config formatting issue, Resolved container health issues when VPN temporarily down, Corrected dashboard metrics to use only available metrics - New Files: root/healthcheck-smart.sh, root/healthcheck-fixed.sh, HEALTHCHECK_OPTIONS.md, FIXES_APPLIED.md, scripts/verify-fixes.sh, scripts/test-transmission-endpoints.sh - Improvements: Updated docker-compose.yml to use smart healthcheck by default, Added VPN health configuration options to .env.sample, Enhanced README with verification steps, Configurable VPN grace periods (default: 5 minutes), Detailed logging and metrics for troubleshooting

--- a/.env.sample
+++ b/.env.sample
@@ -118,6 +118,16 @@ LOG_TO_STDOUT=false
 # CHECK_IP_LEAK=false
 # HEALTH_CHECK_HOST=google.com
 
+# Smart Health Check Settings (for /root/healthcheck-smart.sh)
+# VPN_HEALTH_REQUIRED: Whether VPN failure should fail the health check
+# When true, container will be marked unhealthy if VPN is down (after grace period)
+# When false, only Transmission status affects health
+# VPN_HEALTH_REQUIRED=true
+
+# VPN_GRACE_PERIOD: Time in seconds to wait before marking container unhealthy due to VPN issues
+# This prevents unnecessary container restarts during brief VPN reconnections
+# VPN_GRACE_PERIOD=300
+
 # LinuxServer.io Docker Mods
 # DOCKER_MODS=ghcr.io/gilbn/theme.park:transmission
 # TP_THEME=hotline
